--- a/popup/url.html
+++ b/popup/url.html
@@ -7,15 +7,16 @@
   <style>
     .hidden { display: none; }
     p { padding: 5px 10px; }
+    .w300 { width: 300px; }
   </style>
 </head>
 <body>
   <div id="popup-content">
     <div class="p-2">
       <form class="form-inline">
-        <div class="form-group mb-2">
+        <div class="form-group mb-2 ml-1">
           <label for="url" class="sr-only">URL</label>
-          <input type="text" class="form-control" id="url" value="" autocomplete="off">
+          <input type="text" class="form-control w300" id="url" autocomplete="off" placeholder="De preferencia introduzca una URL.">
         </div>
         <button type="button" id="googlefy" class="btn btn-primary mb-2">Enviar</button>
       </form>
@@ -26,5 +27,5 @@
     <p>Realice una búsqueda y luego envíe la url a buscar.</p>
   </div>
   <script src="url.js"></script>
-</body>
+ </body>
 </html>
